работа с формами login and register

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -42,7 +42,7 @@
                                             </div>
 
                                             <div class="col-6">
-                                                <a href="{% url 'users:google_auth_callback' %}" class="btn btn-outline-secondary w-100 social-btn">
+                                                <a href="#" class="btn btn-outline-secondary w-100 social-btn">
                                                     <i class="fab fa-google text-danger me-2"></i> Google
                                                 </a>
                                             </div>
