работа с формами login and register

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h1 class="card-title mb-1">Иван Иванов</h1>
+                                <h1 class="card-title mb-1">{{ user.first_name }} {{ user.last_name }}</h1>
                                 <p class="text-muted"><i class="fas fa-map-marker-alt me-1"></i> Москва, Россия</p>
                             </div>
                         </div>
