--- a/templates/base.html
+++ b/templates/base.html
@@ -56,9 +56,12 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link text-white" href="{% url 'goods:catalog' %}">Каталог</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link text-white" href="#">Мои объявления</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item mx-2">
+                            <a class="nav-link text-white" href="#">Мои объявления</a>
+                        </li>
+                    {% endif %}
+
                     <li class="nav-item mx-2">
                         <a class="nav-link text-white" href="{% url 'main:about' %}">О нас</a>
                     </li>
