--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -58,6 +58,9 @@
                                                 <label for="first-name"
                                                        class="block text-sm font-medium text-gray-700 mb-1">Имя</label>
                                                 {{ form.username }}
+                                                <label for="last-name"
+                                                       class="block text-sm font-medium text-gray-700 mb-1">Фамилия</label>
+                                                {{ form.username }}
                                             </div>
                                         </div>
 
