работа с формами login and register

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
     <!-- VK SDK -->
     <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
 
+    <!-- Подключение Яндекс SDK -->
+    <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
 
 </head>
 
