--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,7 +7,7 @@
 {% endblock css %}
 
 {% block content %}
-
+<script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
 
     <script>
         const channel = new BroadcastChannel('tab-channel');
@@ -185,6 +185,8 @@
 
     <!-- Custom JS -->
     <script src="{% static "/js/jquery_login.js" %}"></script>
+
+    <script src="{% static "/js/sdk-suggest-with-polyfills-latest.js" %}"></script>
 
     <!--  JS VK Auth -->
     <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
