работа с формами login and register

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -51,7 +51,7 @@
                                         </div>
 
                                         <!-- Кнопка для авторизации через Яндекс -->
-                                        <div id="YaAuthButton"></div>
+{#                                        <div id="YaAuthButton"></div>#}
 
                                         <div class="col-6" id="YaAuthButton2">
                                             <a href="#" class="btn btn-outline-secondary w-100 social-btn">
@@ -191,7 +191,7 @@
     <!--  JS VK Auth -->
     <script src="https://unpkg.com/@vkid/sdk@<3.0.0/dist-sdk/umd/index.js"></script>
     {#    <script src="{% static "/js/index.js" %}"></script>#}
-    <script src="{% static "/js/js_yandex.js" %}"></script>
+{#    <script src="{% static "/js/js_yandex.js" %}"></script>#}
     <script src="{% static "/js/js_vk.js" %}"></script>
     {#    <script src="{% static "/js/js_temp.js" %}"></script>#}
 
